--- a/SarifWeb/packages.config
+++ b/SarifWeb/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery.filedrop" version="1.0.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
