Get file upload working
It wasn't working in the previous PR because I hadn't worked through to the end of the [tutorial](https://www.youtube.com/watch?v=TYmR59zwwe0).

--- a/SarifWeb/SarifWeb.csproj
+++ b/SarifWeb/SarifWeb.csproj
@@ -205,6 +205,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="UploadedFiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
