--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -169,8 +169,11 @@
     <Compile Include="Models\ValidationRequestModel.cs" />
     <Compile Include="Models\ValidationResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ValidationUiService.cs" />
     <Compile Include="Utilities\FileSystem.cs" />
+    <Compile Include="Utilities\HttpClientProxy.cs" />
     <Compile Include="Utilities\IFileSystem.cs" />
+    <Compile Include="Utilities\IHttpClientProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
