--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -166,8 +166,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ValidationRequestModel.cs" />
-    <Compile Include="Models\ValidationResponseModel.cs" />
+    <Compile Include="Models\ValidationRequest.cs" />
+    <Compile Include="Models\ValidationResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ValidationUiService.cs" />
     <Compile Include="Utilities\FileSystem.cs" />
