Get Sarif.Multitool and copy to bin directory

--- a/src/SarifWeb/packages.config
+++ b/src/SarifWeb/packages.config
@@ -28,5 +28,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Sarif.Multitool" version="2.0.0-csd.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
