--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -272,10 +272,15 @@
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
   <Target Name="AfterBuild">
-  </Target> -->
+    <PropertyGroup>
+      <MultitoolDirectory>$(OutputPath)Sarif.Multitool</MultitoolDirectory>
+    </PropertyGroup>
+    <ItemGroup>
+      <MultitoolFiles Include="$(MSBuildThisFileDirectory)..\packages\Sarif.Multitool.2.0.0-csd.1\tools\net461\*" />
+    </ItemGroup>
+    <MakeDir Condition="!Exists('$(MultitoolDirectory)')" Directories="MultitoolDirectory" />
+    <Copy SourceFiles="@(MultitoolFiles)"
+           DestinationFolder="$(MultitoolDirectory)" />
+  </Target>
 </Project>
