--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -190,7 +190,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="BuildScripts\Copy-Multitool.ps1" />
+    <Content Include="BuildScripts\Copy-Sarif.Multitool.ps1" />
     <None Include="Properties\PublishProfiles\SarifWeb - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -224,7 +224,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Multitool\" />
+    <Folder Include="Sarif.Multitool\" />
     <Folder Include="UploadedFiles\" />
   </ItemGroup>
   <ItemGroup>
