Inject do-nothing process runner.

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -175,6 +175,8 @@
     <Compile Include="Utilities\HttpClientProxy.cs" />
     <Compile Include="Utilities\IFileSystem.cs" />
     <Compile Include="Utilities\IHttpClientProxy.cs" />
+    <Compile Include="Utilities\IProcessRunner.cs" />
+    <Compile Include="Utilities\ProcessRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
