Extract injectable ProcessRunner.

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Utilities\IFileSystem.cs" />
     <Compile Include="Utilities\IHttpClientProxy.cs" />
     <Compile Include="Utilities\IProcessRunner.cs" />
+    <Compile Include="Utilities\ProcessResult.cs" />
     <Compile Include="Utilities\ProcessRunner.cs" />
   </ItemGroup>
   <ItemGroup>
