Add --json-schema and remaining arguments to command line.

--- a/src/SarifWeb/packages.config
+++ b/src/SarifWeb/packages.config
@@ -26,8 +26,10 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="Sarif.Multitool" version="2.0.0-csd.1" targetFramework="net461" />
+  <package id="Sarif.Multitool" version="2.0.0-csd.1.0.1" targetFramework="net461" />
+  <package id="Sarif.Sdk" version="2.0.0-csd.1.0.1" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
