--- a/.gitignore
+++ b/.gitignore
@@ -212,5 +212,9 @@ _Pvt_Extensions/
 ModelManifest.xml
 
 # We copy the Sarif.Multitool's binaries and the SARIF schema from their NuGet packages to this
-# location, so that they can be published. But we don't want to commit them.
+# location, so that they can be published, but we don't want to commit them.
 Sarif.Multitool/
+
+# When we test the Web app on our local machine, files that are uploaded for validation appear
+# in this directory, but we don't want to commit them.
+UploadedFiles/
