Invoke validator when file is dropped (#6)
This change finishes the plumbing hookup from the UI to the Web API controller, to the invocation of the `Sarif.Multitool`, to the return of the results back to the `ValidationUiController`. There are two serious problems:

1. Sometimes the request succeeds, I see the `.validation.sarif` file appear in the correct location in the Web application's directory, and the contents of the file look good. But more often, the request hangs up after the log file is created; I see a zero-length file appear, and it never finishes.

2. There is as yet no way to convey the results from the method `ValidationUiController.ValidateFileAsync` (which is invoked from JavaScript) back to the UI.

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,11 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+# We copy the Sarif.Multitool's binaries and the SARIF schema from their NuGet packages to this
+# location, so that they can be published, but we don't want to commit them.
+Sarif.Multitool/
+
+# When we test the Web app on our local machine, files that are uploaded for validation appear
+# in this directory, but we don't want to commit them.
+UploadedFiles/
