--- a/src/SarifWeb.UnitTests/packages.config
+++ b/src/SarifWeb.UnitTests/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="4.3.1" targetFramework="net452" />
   <package id="FluentAssertions" version="5.4.1" targetFramework="net452" />
   <package id="Moq" version="4.9.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="xunit" version="2.4.0" targetFramework="net452" />
