--- a/src/SarifWeb.UnitTests/SarifWeb.UnitTests.csproj
+++ b/src/SarifWeb.UnitTests/SarifWeb.UnitTests.csproj
@@ -87,7 +87,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
