Tools & Libraries section

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -182,6 +182,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Logos\3M.png" />
+    <Content Include="Images\Logos\Adobe.png" />
+    <Content Include="Images\Logos\Amazon.png" />
+    <Content Include="Images\Logos\AT&amp;T.png" />
+    <Content Include="Images\Logos\BMW.png" />
+    <Content Include="Images\Logos\Dell.png" />
+    <Content Include="Images\Logos\EMC2.png" />
+    <Content Include="Images\Logos\Energizer.png" />
+    <Content Include="Images\Logos\Expedia.png" />
+    <Content Include="Images\Logos\Microsoft.png" />
+    <Content Include="Images\Logos\NFL.png" />
+    <Content Include="Images\Logos\Visa.png" />
+    <Content Include="Images\Logos\Zillow.png" />
+    <Content Include="Images\Nuget.png" />
+    <Content Include="Images\Screenshots\Elisabeth-and-the-Tornado.jpg" />
+    <Content Include="Images\Screenshots\FutureExplorer.jpg" />
+    <Content Include="Images\Screenshots\MiddleEast.png" />
+    <Content Include="Images\Screenshots\PoisonDartFrog.jpg" />
+    <Content Include="Images\triskelion.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
