--- a/src/SarifWeb/packages.config
+++ b/src/SarifWeb/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="bootstrap" version="4.1.3" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.filedrop" version="1.0.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
@@ -27,6 +27,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Sarif.Multitool" version="2.0.0-csd.1.0.1" targetFramework="net461" />
   <package id="Sarif.Sdk" version="2.0.0-csd.1.0.1" targetFramework="net461" />
