--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -214,10 +214,10 @@
     <Content Include="Images\Logos\Visa.png" />
     <Content Include="Images\Logos\Zillow.png" />
     <Content Include="Images\Nuget.png" />
-    <Content Include="Images\Screenshots\Elisabeth-and-the-Tornado.jpg" />
-    <Content Include="Images\Screenshots\FutureExplorer.jpg" />
-    <Content Include="Images\Screenshots\MiddleEast.png" />
-    <Content Include="Images\Screenshots\PoisonDartFrog.jpg" />
+    <Content Include="Images\Screenshots\VSCodeViewer.png" />
+    <Content Include="Images\Screenshots\VSViewer.png" />
+    <Content Include="Images\Screenshots\WebViewerA.png" />
+    <Content Include="Images\Screenshots\WebViewerB.png" />
     <Content Include="Images\triskelion.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
