Add image viewer for screenshots + update images

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -203,21 +203,25 @@
     <Content Include="Images\Logos\3M.png" />
     <Content Include="Images\Logos\Adobe.png" />
     <Content Include="Images\Logos\Amazon.png" />
-    <Content Include="Images\Logos\AT&amp;T.png" />
     <Content Include="Images\Logos\BMW.png" />
     <Content Include="Images\Logos\Dell.png" />
     <Content Include="Images\Logos\EMC2.png" />
-    <Content Include="Images\Logos\Energizer.png" />
     <Content Include="Images\Logos\Expedia.png" />
+    <Content Include="Images\Logos\HPE.png" />
+    <Content Include="Images\Logos\MicroFocus.png" />
     <Content Include="Images\Logos\Microsoft.png" />
-    <Content Include="Images\Logos\NFL.png" />
+    <Content Include="Images\Logos\Semmle.png" />
     <Content Include="Images\Logos\Visa.png" />
     <Content Include="Images\Logos\Zillow.png" />
     <Content Include="Images\Nuget.png" />
     <Content Include="Images\Screenshots\VSCodeViewer.png" />
+    <Content Include="Images\Screenshots\VSCodeViewer.thumbnail.png" />
     <Content Include="Images\Screenshots\VSViewer.png" />
+    <Content Include="Images\Screenshots\VSViewer.thumbnail.png" />
     <Content Include="Images\Screenshots\WebViewerA.png" />
+    <Content Include="Images\Screenshots\WebViewerA.thumbnail.png" />
     <Content Include="Images\Screenshots\WebViewerB.png" />
+    <Content Include="Images\Screenshots\WebViewerB.thumbnail.png" />
     <Content Include="Images\triskelion.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
