--- a/src/SarifWeb.UnitTests/SarifWeb.UnitTests.csproj
+++ b/src/SarifWeb.UnitTests/SarifWeb.UnitTests.csproj
@@ -94,6 +94,9 @@
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ScreenSimulator.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
