--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -197,10 +197,19 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Frame-Media-Mobile-Landscape.css" />
+    <Content Include="Content\Frame-Media-Mobile.css" />
+    <Content Include="Content\Frame-Media-Tablet-Landscape.css" />
+    <Content Include="Content\Frame-Media-Tablet.css" />
+    <Content Include="Content\Frame.css" />
+    <Content Include="Content\Home-Media-Mobile-Landscape.css" />
+    <Content Include="Content\Home-Media-Tablet-Landscape.css" />
+    <Content Include="Content\Home-Media-Tablet.css" />
     <Content Include="Content\ImageViewer.css" />
+    <Content Include="Content\Home-Media-Mobile.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Main.css" />
+    <Content Include="Content\Home.css" />
     <Content Include="Images\Logos\GrammaTech.png" />
     <Content Include="Images\Logos\KestrelTechnology.png" />
     <Content Include="Images\Logos\MicroFocus.png" />
