--- a/src/SarifWeb/packages.config
+++ b/src/SarifWeb/packages.config
@@ -5,16 +5,17 @@
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.filedrop" version="1.0.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.JavaScript" version="0.15.0-build58334" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="1.2.3" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Web" version="1.2.3" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="1.2.3" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="1.2.3" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -32,5 +33,6 @@
   <package id="Sarif.Multitool" version="2.0.0-csd.1.0.1" targetFramework="net461" />
   <package id="Sarif.Sdk" version="2.0.0-csd.1.0.1" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
