Results list population + test server publish profile

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -210,6 +210,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Home.css" />
+    <Content Include="Images\download.png" />
     <Content Include="Images\Logos\GrammaTech.png" />
     <Content Include="Images\Logos\KestrelTechnology.png" />
     <Content Include="Images\Logos\MicroFocus.png" />
@@ -303,7 +304,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\SARIF-SRV01.pubxml" />
     <None Include="Properties\PublishProfiles\SarifWeb - Web Deploy.pubxml" />
     <Content Include="Scripts\Cookie.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
