Layout updates & refactor + feedback changes
Refactored drag-n-drop, removed jquery filedrop
Detect and confirm large files, allow up to 1GB
Handle no results case
Remove results list
Prev/next results navigation
Improve management of the UI state

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -217,7 +217,10 @@
     <Content Include="Images\Logos\Microsoft.png" />
     <Content Include="Images\Logos\Semmle.png" />
     <Content Include="Images\Logos\SWAMP.png" />
+    <Content Include="Images\next.png" />
     <Content Include="Images\Nuget.png" />
+    <Content Include="Images\prev.png" />
+    <Content Include="Images\reload.png" />
     <Content Include="Images\Screenshots\VSCodeViewer.png" />
     <Content Include="Images\Screenshots\VSCodeViewer.thumbnail.png" />
     <Content Include="Images\Screenshots\VSViewer.png" />
