--- a/src/SarifWeb/Web.config
+++ b/src/SarifWeb/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="1048576" executionTimeout="200" /> <!-- 1GB in kilobytes -->
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -271,6 +271,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" /> <!-- 1GB in bytes -->
+      </requestFiltering>
+    </security>
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
