--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -210,6 +210,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Home.css" />
+    <Content Include="Images\cog.png" />
     <Content Include="Images\download.png" />
     <Content Include="Images\Logos\GrammaTech.png" />
     <Content Include="Images\Logos\KestrelTechnology.png" />
