Update for SARIF v2.1 + cleanup & fixes

--- a/src/SarifWeb/packages.config
+++ b/src/SarifWeb/packages.config
@@ -30,8 +30,8 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="Sarif.Multitool" version="2.0.0-csd.1.0.1" targetFramework="net461" />
-  <package id="Sarif.Sdk" version="2.0.0-csd.1.0.1" targetFramework="net461" />
+  <package id="Sarif.Multitool" version="2.1.0-beta.1" targetFramework="net461" />
+  <package id="Sarif.Sdk" version="2.1.0-beta.1" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
