--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -83,7 +83,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Sarif, Version=2.1.0.0, Culture=neutral, PublicKeyToken=21a5e83f6f5bb844, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sarif.Sdk.2.1.0-beta.1\lib\net461\Sarif.dll</HintPath>
+      <HintPath>..\packages\Sarif.Sdk.2.1.0-rtm.0\lib\net461\Sarif.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
