Fix #119: Online validator doesn't report all results
The problem is that the web site runs the validator with --config github.config.xml, which it gets from the SARIF SDK. But that config is intended to be used when the only thing you care about is that GitHub will accept your SARIF. As such, it disables many of the note-level rules.

The fix is to use a web-site specific configuration file that turns on the GitHub rules without turning off any other rules.

--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -229,6 +229,9 @@
     <Content Include="Images\Screenshots\WebViewerB.png" />
     <Content Include="Images\Screenshots\WebViewerB.thumbnail.png" />
     <Content Include="Images\triskelion.png" />
+    <Content Include="policies\allRules.config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\ace\ace.js" />
     <Content Include="Scripts\ace\ext-beautify.js" />
     <Content Include="Scripts\ace\ext-elastic_tabstops_lite.js" />
